Fix some bugs related to g2 configuration.  Replace insane defaults in opensbp.json.  Fix various macro bugs.  Enforce default units.  Improve interoperability of macro and editor apps

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -1363,8 +1363,8 @@
   <section role="tabpanel" aria-hidden="true" class="content" id="tabpanel6">
     <div class="row">
       <fieldset>
-        <legend>Envelope</legend>
-        <div class="large-8 columns">
+        <legend>Machine Envelope</legend>
+        <div class="large-6 columns">
           <div class="row collapse">
             <label>X Min</label>
             <div class="small-9 columns">
@@ -1376,7 +1376,7 @@
           </div> 
         </div>
 
-        <div class="large-8 columns">
+        <div class="large-6 columns">
           <div class="row collapse">
             <label>X Max</label>
             <div class="small-9 columns">
@@ -1388,7 +1388,7 @@
           </div> 
         </div>
 
-        <div class="large-8 columns">
+        <div class="large-6 columns">
           <div class="row collapse">
             <label>Y Min</label>
             <div class="small-9 columns">
@@ -1400,7 +1400,7 @@
           </div> 
         </div>
 
-        <div class="large-8 columns">
+        <div class="large-6 columns">
           <div class="row collapse">
             <label>Y Max</label>
             <div class="small-9 columns">
