--- a/dashboard/apps/macro_manager.fma/index.html
+++ b/dashboard/apps/macro_manager.fma/index.html
@@ -82,7 +82,7 @@
                 "ajax": {
                     "url" : "/macros",
                     "dataSrc" : function(json) { 
-                        return json.data; }
+                        return json.data.macros; }
                     },
                 "columns": [
                     {
