dropdown template made

--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -209,7 +209,7 @@
                 "className":      'actions-control',
                 "orderable":      false,
                 "data":           null,
-                "defaultContent": "<a href='#' class='ellipses' data-dropdown='drop1' aria-controls='drop1' aria-expanded='false'>...</a>",
+                "defaultContent": "<div class='ellipses'><span>...</span></div><div class='dropDown'><ul class='jobActions'><li><a id='preview-job._id'>Preview Job &gt;&gt;</a></li><li><a id='edit-job._id'>Edit Job &gt;&gt;</a></li><li><a id='resubmit-job._id'>Resubmit Job &gt;&gt;</a></li><li><a id='download-job._id'>Download Job &gt;&gt;</a></li></ul></div",
             },
         ],
         "order" : [[3,"desc"]]
@@ -258,7 +258,7 @@
                 "className":      'actions-control',
                 "orderable":      false,
                 "data":           null,
-                "defaultContent": "<a data-dropdown='drop1' aria-controls='drop1' aria-expanded='false'><div class='ellipses'><span>...</span></div></a>",
+                "defaultContent": "<div class='ellipses'><span>...</span></div><div class='commentBox'></div><div class='dropDown'><ul class='jobActions'><li><a id='preview-job._id'>Preview Job &gt;&gt;</a></li><li><a id='edit-job._id'>Edit Job &gt;&gt;</a></li><li><a id='resubmit-job._id'>Resubmit Job &gt;&gt;</a></li><li><a id='download-job._id'>Download Job &gt;&gt;</a></li></ul></div",
             },
         ],
         "order" : [[3,"desc"]]
@@ -468,8 +468,7 @@
 
   });
 </script>
-<a href="#" class="ellipses"   data-dropdown="drop1" aria-controls="drop1" aria-expanded="false">...</a>
-<ul id='drop1' class='f-dropdown' data-dropdown-content aria-hidden='true' tabindex='-1'><li><a id='preview-job._id'>Preview Job &gt;&gt;</a></li><li><a id='edit-job._id'>Edit Job &gt;&gt;</a></li></ul>
+
 </body>
 </html>
 
