--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -209,7 +209,7 @@
                 "className":      'actions-control',
                 "orderable":      false,
                 "data":           null,
-                "defaultContent": "<div class='ellipses'><span>...</span></div><div class='dropDown'><ul class='jobActions'><li><a id='preview-job._id'>Preview Job &gt;&gt;</a></li><li><a id='edit-job._id'>Edit Job &gt;&gt;</a></li><li><a id='resubmit-job._id'>Resubmit Job &gt;&gt;</a></li><li><a id='download-job._id'>Download Job &gt;&gt;</a></li></ul></div",
+                "defaultContent": "<div class='ellipses'><span>...</span></div><div class='commentBox'></div><div class='dropDown'><ul class='jobActions'><li><a id='preview--J'>Preview Job</a></li><li><a id='edit--J'>Edit Job</a></li><li><a id='resubmit--J'>Resubmit Job</a></li><li><a id='download--J'>Download Job</a></li></ul></div",
             },
         ],
         "order" : [[3,"desc"]]
@@ -258,7 +258,7 @@
                 "className":      'actions-control',
                 "orderable":      false,
                 "data":           null,
-                "defaultContent": "<div class='ellipses'><span>...</span></div><div class='commentBox'></div><div class='dropDown'><ul class='jobActions'><li><a id='preview-job._id'>Preview Job &gt;&gt;</a></li><li><a id='edit-job._id'>Edit Job &gt;&gt;</a></li><li><a id='resubmit-job._id'>Resubmit Job &gt;&gt;</a></li><li><a id='download-job._id'>Download Job &gt;&gt;</a></li></ul></div",
+                "defaultContent": "<div class='ellipses'><span>...</span></div><div class='commentBox'></div><div class='dropDown'><ul class='jobActions'><li><a id='preview--J'>Preview Job</a></li><li><a id='edit--J'>Edit Job</a></li><li><a id='resubmit--J'>Resubmit Job</a></li><li><a id='download--J'>Download Job</a></li></ul></div",
             },
         ],
         "order" : [[3,"desc"]]
@@ -321,9 +321,20 @@
     $('#history_table tbody').on('click', 'td.actions-control', function () {
         var tr = $(this).closest('tr');
         var row = history_table.row( tr );
- 			job = row.data()
- 			//$(this).closest($('.actions-control')).append(actions_child_row(job));
-			 
+		job = row.data();
+		var dd = $(this).children();
+		dd.show();
+		var jobId = $('.dropDown').html().replace(/-J/g, job._id);
+		console.log(jobId);
+		$('.dropDown').html(jobId);
+		$('.dropDown').mouseleave(function (){
+			$('.dropDown').hide();
+			$('.commentBox').hide();
+		});
+		$('td.actions-control').mouseleave(function (){
+			$('.dropDown').hide();
+			$('.commentBox').hide();
+		});
  			$('#resubmit-'+job._id).click(function(e) {
 				fabmoDashboard.resubmitJob(job._id, function(err, result) {
 					refresh_jobs_list();
