--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -309,24 +309,28 @@
     	return ''
     }
 
-    	// Add event listener for opening preview
-    $('#history_table tbody').on('click', 'td.preview-control', function () {
-        var tr = $(this).closest('tr');
-        var row = history_table.row( tr );
-        job = row.data();
- 		fabmoDashboard.launchApp('previewer', {'job' : job._id});
-    } );
+    // 	// Add event listener for opening preview
+    // $('#history_table tbody').on('click', 'td.preview-control', function () {
+    //     var tr = $(this).closest('tr');
+    //     var row = history_table.row( tr );
+    //     job = row.data();
+ 	// 	fabmoDashboard.launchApp('previewer', {'job' : job._id});
+    // } );
+	
+
 	
 		// Add event listener for opening and closing further actions
-    $('#history_table tbody').on('click', 'td.actions-control', function () {
+    $('#history_table tbody').on('click', 'div.ellipses', function () {
+		console.log(this);
         var tr = $(this).closest('tr');
         var row = history_table.row( tr );
 		job = row.data();
-		var dd = $(this).children();
-		dd.show();
-		var jobId = $('.dropDown').html().replace(/-J/g, job._id);
-		console.log(jobId);
-		$('.dropDown').html(jobId);
+		var dd = $(this).nextAll();
+			console.log(job._id);
+			dd.show();
+			var jobId = $('.dropDown').html().replace(/-J|[0-9]/g, job._id);
+			$('.dropDown').html(jobId);
+
 		$('.dropDown').mouseleave(function (){
 			$('.dropDown').hide();
 			$('.commentBox').hide();
@@ -335,19 +339,19 @@
 			$('.dropDown').hide();
 			$('.commentBox').hide();
 		});
- 			$('#resubmit-'+job._id).click(function(e) {
+ 			$('.dropDown').on('click', 'a#resubmit-'+job._id.toString(), function(e) {
 				fabmoDashboard.resubmitJob(job._id, function(err, result) {
-					refresh_jobs_list();
 					$('#nav-pending').click();
+					refresh_jobs_list();
 				});
 			});
-			$('#preview-'+job._id).click(function(e) {
+			$('.dropDown').on('click', 'a#preview-'+job._id.toString(), function(e) {
 				fabmoDashboard.launchApp('previewer', {'job' : job._id});
 			});
-			$('#edit-'+job._id).click(function(e) {
+			$('.dropDown').on('click', 'a#edit-'+job._id.toString(), function(e) {
 				fabmoDashboard.launchApp('editor', {'job' : job._id});
 			});
- 			$('#download-'+job._id).attr({'href':'/job/' + job._id + '/file'});
+ 			$('#download-'+job._id.toString()).attr({'href':'/job/' + job._id + '/file'});
  		});
 
 	// Add event listener for opening and closing details
@@ -370,20 +374,20 @@
  		} else {
  			job = row.data()
  			row.child( history_child_row(job) ).show();
- 			$('#resubmit-'+job._id).click(function(e) {
-				fabmoDashboard.resubmitJob(job._id, function(err, result) {
-					refresh_jobs_list();
-					$('#nav-pending').click();
-				});
-			});
-			$('#preview-'+job._id).click(function(e) {
-				fabmoDashboard.launchApp('previewer', {'job' : job._id});
-			});
-			$('#edit-'+job._id).click(function(e) {
-				fabmoDashboard.launchApp('editor', {'job' : job._id});
-			});
+ 			// $('#resubmit-'+job._id).click(function(e) {
+			// 	fabmoDashboard.resubmitJob(job._id, function(err, result) {
+			// 		refresh_jobs_list();
+			// 		$('#nav-pending').click();
+			// 	});
+			// });
+			// $('#preview-'+job._id).click(function(e) {
+			// 	fabmoDashboard.launchApp('previewer', {'job' : job._id});
+			// });
+			// $('#edit-'+job._id).click(function(e) {
+			// 	fabmoDashboard.launchApp('editor', {'job' : job._id});
+			// });
 
- 			$('#download-'+job._id).attr({'href':'/job/' + job._id + '/file'});
+ 			// $('#download-'+job._id).attr({'href':'/job/' + job._id + '/file'});
 
 	        tr.addClass('shown');
  		}
