Changes to updates, engine configuration, and deleted some unneeded dependencies

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -201,17 +201,18 @@
         <div id="modalDialogDetail"></div>        
         <a class="close-reveal-modal">&#215;</a>
       </div>
+
     <script type="text/javascript" src="js/libs/jquery.js">         </script>
     <script type="text/javascript" src="js/libs/foundation.min.js"> </script>
     <script type="text/javascript" src="socket.io/socket.io.js">      </script>
-    <script type="text/javascript" src="js/libs/touche.js">         </script>
+    <!--<script type="text/javascript" src="js/libs/touche.js">         </script> -->
     <script type="text/javascript" src="js/libs/toastr.min.js">     </script>
     <script type="text/javascript" src="js/libs/underscore.js">     </script>
     <script type="text/javascript" src="js/events.js">              </script>
     <script type="text/javascript" src="js/libs/backbone.js">       </script>
     <script type="text/javascript" src="js/libs/FabMo-latest.js">   </script>
     <script type="text/javascript" src="js/libs/FabMoUI-latest.js"> </script>
-    <script type="text/javascript" src="js/libs/Sortable.min.js">       </script>
+    <!--<script type="text/javascript" src="js/libs/Sortable.min.js"></script> -->
     <script type="text/javascript" src="js/libs/handwheel.js">     </script>
     <script data-main="js/app.js" src="js/libs/require.js">         </script>
 
