--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <title>FabMo Dashboard</title>
-    
+
     <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/foundation.css" />
+    <link rel="stylesheet" href="css/foundation.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/toastr.min.css" />
   </head>
@@ -174,7 +174,6 @@
 
           </aside>
 
-    
           <!-- App Menu -->
           <section class="app-section">
             <div style="height:100%">
@@ -186,6 +185,7 @@
             <div id="navbar_container"></div>
             <div id="modal_container" style="display:none;"></div>
             <div id="app-client-container"></div>
+            <div id"spinner-container"></div>
             <div class="clear"></div>
           </section>
 
