fixing title shift in apps

--- a/dashboard/apps/app_manager.fma/index.html
+++ b/dashboard/apps/app_manager.fma/index.html
@@ -14,7 +14,7 @@
 	<nav class="top-bar" data-topbar role="navigation">
 	  <ul class="title-area">
 	    <li class="name">
-	      <h1><a href="#">Apps</a></h1>
+	      <h1><a >Apps</a></h1>
 	    </li>
 	    <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
 	  </ul>
