--- a/dashboard/apps/editor.fma/index.html
+++ b/dashboard/apps/editor.fma/index.html
@@ -22,7 +22,7 @@
   <nav class="top-bar" data-topbar role="navigation">
   <ul class="title-area">
     <li class="name">
-      <h1><a id="app-header" href="">Editor</a></h1>
+      <h1><a id="app-header" >Editor</a></h1>
     </li>
     <li class="toggle-topbar"><a href="#"><span>Menu</span></a></li>
   </ul>
