--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -14,7 +14,7 @@
   <nav class="top-bar" data-topbar role="navigation">
   <ul class="title-area">
     <li class="name">
-      <h1><a id="app-header" href="#">Job Manager</a></h1>
+      <h1><a id="app-header" >Job Manager</a></h1>
     </li>
     <li class="toggle-topbar"><a href="#"><span>Menu</span></a></li>
   </ul>
@@ -362,6 +362,7 @@
 			});
 			$('.dropDown').on('click', 'a#download-'+job._id.toString(), function(e) {
 				$('.downloadJob').attr({'href':'/job/' + job._id + '/file'});
+				$('.downloadJob').click();
 			});	
  		});
 
