--- a/dashboard/apps/network_manager.fma/index.html
+++ b/dashboard/apps/network_manager.fma/index.html
@@ -14,7 +14,7 @@
         <nav class="top-bar" data-topbar role="navigation">
           <ul class="title-area">
             <li class="name">
-              <h1><a id="app-header" href="">Network</a></h1>
+              <h1><a id="app-header" >Network</a></h1>
             </li>
             <li class="toggle-topbar"><a href="#"><span>Menu</span></a></li>
           </ul>
