--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -14,6 +14,8 @@
 
   <!-- Body of the page -->
   <body>
+              <div id="spinner"></div>
+
       <div id="main" class="off-canvas-wrap" data-offcanvas>
         <div class="inner-wrap">
 
@@ -176,6 +178,7 @@
           <!-- App Menu -->
           <section class="app-section">
             <div style="height:100%">
+
               <ul id="app_menu_container"></ul>
             </div>
           </section>
@@ -184,7 +187,6 @@
             <div id="navbar_container"></div>
             <div id="modal_container" style="display:none;"></div>
             <div id="app-client-container"></div>
-            <div id"spinner-container"></div>
             <div class="clear"></div>
           </section>
 
@@ -201,6 +203,35 @@
         <a class="close-reveal-modal">&#215;</a>
       </div>
 
+      <script type="text/javascript" src="/js/libs/spin.min.js"></script>
+  <script type="text/javascript">
+    var opts = {
+  lines: 13 // The number of lines to draw
+, length: 28 // The length of each line
+, width: 14 // The line thickness
+, radius: 42 // The radius of the inner circle
+, scale: 1 // Scales overall size of the spinner
+, corners: 1 // Corner roundness (0..1)
+, color: '#000' // #rgb or #rrggbb or array of colors
+, opacity: 0.25 // Opacity of the lines
+, rotate: 0 // The rotation offset
+, direction: 1 // 1: clockwise, -1: counterclockwise
+, speed: 1 // Rounds per second
+, trail: 60 // Afterglow percentage
+, fps: 20 // Frames per second when using setTimeout() as a fallback for CSS
+, zIndex: 2e9 // The z-index (defaults to 2000000000)
+, className: 'spinner' // The CSS class to assign to the spinner
+, top: '50%' // Top position relative to parent
+, left: '50%' // Left position relative to parent
+, shadow: true // Whether to render a shadow
+, hwaccel: true // Whether to use hardware acceleration
+, position: 'absolute' // Element positioning
+//, top: 200
+//, left: 200
+}
+var target = document.getElementById('spinner')
+var spinner = new Spinner(opts).spin(target);
+  </script>
     <script type="text/javascript" src="js/libs/require.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
   </body>
